<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.galou.watchmyback.profile.ProfileViewModel" />
    </data>


<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/activity_profile_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/profile_view_toolbar"
            layout="@layout/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.core.widget.ContentLoadingProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_view_progressbar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            app:layout_constraintTop_toBottomOf="@id/profile_view_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            android:indeterminate="true"
            app:visibleOrInvisible="@{viewmodel.dataLoading}"/>

        <ImageView
            android:id="@+id/profile_view_picture"
            android:layout_marginTop="@dimen/margin_big"
            android:layout_width="@dimen/image_big"
            android:layout_height="@dimen/image_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_view_progressbar"
            app:loadUrlInCircle="@{viewmodel.pictureUrlLD}"/>

        <ImageView
            android:id="@+id/add_agent_view_add_photo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="@id/profile_view_picture"
            app:layout_constraintStart_toStartOf="@id/profile_view_picture"
            app:layout_constraintTop_toTopOf="@id/profile_view_picture"
            app:layout_constraintBottom_toBottomOf="@id/profile_view_picture"
            android:src="@drawable/icon_photo"
            android:onClick="@{() -> viewmodel.pickProfilePicture()}"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_view_username_layout"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/profile_view_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:errorMessage="@{viewmodel.errorUsername}">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_view_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapWords"
                android:text="@={viewmodel.usernameLD}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_view_email_layout"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/profile_view_username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:errorMessage="@{viewmodel.errorEmail}">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_view_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:text="@={viewmodel.emailLD}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_view_phone_layout"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/profile_view_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            app:errorMessage="@{viewmodel.errorPhoneNumber}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_view_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:text="@={viewmodel.phoneNumberLD}"/>

        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>