<resources>

    <!-- DO NOT DELETE STRING FOR TESTING -->
    <string name="test_message" translatable="false">Test Message</string>

    <string name="app_name">Watch My Back</string>
    <string name="menu_title">Map</string>
    <string name="trips_title">Trips</string>
    <string name="friends_title">Friends</string>
    <string name="check_list_title">Check List</string>
    <string name="my_trip">My trip</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>

    <string name="is_in"> &#160; is in &#160;</string>
    <string name="trip_type">trip type: &#160;</string>
    <string name="back_at">back at: &#160;</string>
    <string name="back_at_planned">back at (schedule time): &#160;</string>
    <string name="started_at">started at: &#160;</string>
    <string name="weather">Weather</string>
    <string name="longitude">Longitude: &#160;</string>
    <string name="latitude">Latitude: &#160;</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="pass_by_planned_time">pass by (schedule time): &#160;</string>
    <string name="pass_by">pass by: &#160;</string>
    <string name="details">Details</string>
    <string name="update_frequency">Update frequency: &#160;</string>
    <string name="status">Status</string>
    <string name="last_update">Last update: &#160;</string>
    <string name="last_known_position">Last known location: &#160;</string>
    <string name="separator"> &#160; </string>
    <string name="type">type: &#160;</string>
    <string name="details_trip">Trip Details</string>
    <string name="checklist_name">Checklist Name</string>
    <string name="trip_type_title">Trip type</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item name</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="emergency">Emergency</string>
    <string name="local_emergency_phone_number">Local emergency phone number</string>
    <string name="unit_system">Unit System</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="am_pm">AM/PM</string>
    <string name="_24h">24H</string>
    <string name="data">Data</string>
    <string name="delete_all_my_data">Delete all My data</string>
    <string name="friend_late">Notify when a friend is late</string>
    <string name="friend_back">Notify when a friend is back safe</string>
    <string name="friend_update">Notify when a friend update his/her location</string>
    <string name="friend_emergency">Notify when a friend is in an emergency</string>
    <string name="add_trip">Add Trip</string>
    <string name="trip_main_location">Trip main location</string>
    <string name="send_location_every">Send location every &#160;</string>
    <string name="add_watchers">Add watchers</string>
    <string name="call_emergency">Call Emergency</string>
    <string name="watchers">Watchers</string>
    <string name="start_point">Start Point</string>
    <string name="use_my_location">Use my location</string>
    <string name="pick_on_map">Pick on map</string>
    <string name="schedule_time">Schedule time</string>
    <string name="pick_a_check_list">Pick a check list</string>
    <string name="end_point">End Point</string>
    <string name="stages">Stages</string>
    <string name="add_stage">Add Stage</string>
    <string name="biking">Biking</string>
    <string name="mountain_biking">Mountain biking</string>
    <string name="hiking">Hiking</string>
    <string name="running">Running</string>
    <string name="skiing">Skiing</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="on_schedule">On Schedule</string>
    <string name="no_updates">No updates</string>
    <string name="back_home">Back home</string>
    <string name="late">Late</string>
    <string name="late_no_news">Late and no updates</string>
    <string name="really_late">Really late</string>
    <string name="distress">Distress</string>
    <string name="clear_sky">Clear sky</string>
    <string name="few_clouds">Few clouds</string>
    <string name="scattered_clouds">Scattered clouds</string>
    <string name="broken_clouds">Broken clouds</string>
    <string name="shower_rain">Shower rain</string>
    <string name="thunerstorm">Thunderstorm</string>
    <string name="snow">Snow</string>
    <string name="mist">Mist</string>
    <string name="error_fetching">Error while fetching user</string>
    <string name="error_creatng_user_remote">Error while creating user remotely</string>
    <string name="welcome">Welcome!</string>
    <string name="no_internet">No Internet access</string>
    <string name="unknown_error">Unknown error</string>
    <string name="authentification_cancelled">Authentification was cancelled</string>
    <string name="failed_signout">Failed to sign out</string>
    <string name="welcome_back">Welcome back</string>
    <string name="info_updated">Your informations were updated</string>
    <string name="fail_not_saved">Something wrong happened, changes were not saved</string>
    <string name="incorrect_username">Incorrect username</string>
    <string name="incorrect_email">Incorrect Email</string>
    <string name="incorrect_phone_number">Incorrect phone number</string>
    <string name="pick_library">Pick from library</string>
    <string name="take_picture">Take Picture</string>
    <string name="app_storage_perm">This application needs storage permission</string>
    <string name="error_download_picture">Error while downloading picture</string>
    <string name="canceled">Operation was canceled</string>
    <string name="picture_updated">Your picture was updated</string>
    <string name="error_update_picture">Error while updating your picture</string>
    <string name="fetch_preferences_error">Error fetching preferences</string>
    <string name="error_delete_account">Something wrong happened</string>
    <string name="error_deletion">Unknown error, your account hasn\'t been deleted properly</string>
    <string name="error_fetch_friends">Error while fetching your friend</string>
    <string name="error_occured">An error has occurred</string>
    <string name="no_friends_yet">You don\'t have any friends yet</string>
    <string name="search">Search</string>
    <string name="by_username">by username</string>
    <string name="by_email">by email</string>
    <string name="no_user">No users to show</string>
    <string name="error_fetch_check_lists">Error while fetching your checklists</string>
    <string name="no_checkList">No CheckList to show</string>
    <string name="error_fetch_checklist">Error while fetching the checklist</string>
    <string name="error_saving_list">Error while saving your list please try again</string>
    <string name="eror_name_checklist">Must have a name</string>
    <string name="error_type_checklist">Must have a type</string>
    <string name="error_item_checklist">Must have at least one item</string>
    <string name="error_delete_checklist">Error while deleting your check list</string>
    <string name="delete_check_list">Delete Check List</string>
    <string name="pick_type_trip">Pick a type</string>
    <string name="fifteen_minutes">15 min</string>
    <string name="thirteen_minutes">30 min</string>
    <string name="hour">hour</string>
    <string name="two_hours">2 hours</string>
    <string name="add_friends_first">Add a friend first</string>
    <string name="select_type_first">Select a type for your trip first</string>
    <string name="create_checklist_first">Create a check list first</string>
    <string name="unknown">Unknown</string>
    <string name="cant_be_empty">Can\'t be empty</string>
    <string name="title_add_checklist">Create a CheckList</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="never">Never</string>
    <string name="create_new_checklist">Create New Checklist</string>
    <string name="add_friends">Add Friends</string>
    <string name="rain">Rain</string>
    <string name="location_permission">This app need location permissions</string>
    <string name="turn_on_gps">Turn on your GPS</string>
    <string name="trip_creation_error">Something wrong happened, your trip was not created</string>
    <string name="unknown_condition">Unknown condition</string>
    <string name="pick_location_title">Pick Location</string>
    <string name="click_on_map">Do a long click on the map to add a point</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="add_button">add button</string>
    <string name="error_fetching_current_trip">An error occurred while fetching your current trip</string>
    <string name="city">City: &#160;</string>
    <string name="country">Country: &#160;</string>
    <string name="drizzle">Drizzle</string>
    <string name="smoke">Smoke</string>
    <string name="Haze">Haze</string>
    <string name="Dust">Dust</string>
    <string name="fog">Fog</string>
    <string name="sand">Sand</string>
    <string name="ash">Ash</string>
    <string name="squall">Squall</string>
    <string name="tornado">Tornado</string>
    <string name="clear">Clear</string>
    <string name="clouds">Clouds</string>
    <string name="weather_image">Weather Image</string>
    <string name="point_details_title">Point Details</string>
    <string name="add_friends_title">Add Friends</string>
    <string name="trip_type_icon">Trip type icon</string>
    <string name="error_fetch_trip">An error happened while fetching the trip</string>
    <string name="no_current_active_trip">You don\'t have any current active trip</string>
    <string name="main_location">Main Location: &#160;</string>
    <string name="no_checkup_yet">The user hasn\'t check up yet</string>
    <string name="no_emergency_number">No emergency number setup</string>
    <string name="call">Call &#160;</string>
    <string name="no_phone_number">This user hasn\'t set any phone number yet</string>
    <string name="error_fetch_trip_checklist">Error while fetching the trip checklist</string>
    <string name="global">Global</string>
    <string name="error_fetch_trips_watching">Error while fetching the trips you are watching</string>
    <string name="error_fetch_owner">Error converting your trip for display</string>
    <string name="phone_call_permission">This app need phone call permission</string>
    <string name="type_point">Type</string>
    <string name="scheduled_point">Scheduled Point</string>
    <string name="checked_up_point">Checked Up Point</string>
    <string name="error_update_trip">Error while updating your trip status</string>
    <string name="back_home_safe">You are back home safe</string>
    <string name="channel_late_name">Friend is late</string>
    <string name="channel_late_description">Send notification when one of my friend is late</string>
    <string name="channel_back_name">Friend is back safe</string>
    <string name="channel_back_description">Send notification when one of my friend is back home</string>
    <string name="notification_late_title">%s is late</string>
    <string name="last_checkup_time">last checkup at %s</string>
    <string name="supposed_be_back_at">was supposed to be back at %s</string>
    <string name="back_home_notification_title">%s is back home!</string>
    <string name="no_checklist_for_this_trip">No checklist for this trip</string>
    <string name="no_trips_watching">You are not watching any trip</string>
    <string name="no_trips_to_show">No trips to show</string>
    <string name="no_checklist_to_show">No checklist to show</string>
    <string name="no_friends_to_show">No friends to show</string>
    <string name="need_internet">You need an internet connetion</string>
</resources>
