<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/validate_menu_validate"
        android:icon="@drawable/icon_check"
        app:showAsAction="always"
        android:title="@string/save"
        android:iconTint="@color/colorAccent"/>

</menu>